--- a/index.html
+++ b/index.html
@@ -11,82 +11,36 @@
     <!-- Page Title -->
     <title>Dark Creative StandAlone | MegaOne HTML5 Template</title>
     <!-- Favicon -->
-    <link href="../vendor/img/favicon.ico" rel="icon">
+    <link href="vendor/img/favicon.ico" rel="icon">
     <!-- Bundle -->
-    <link rel="stylesheet" href="../vendor/css/bundle.min.css">
+    <link rel="stylesheet" href="vendor/css/bundle.min.css">
     <!-- Plugin Css -->
-    <link href="../vendor/css/wow.css" rel="stylesheet">
-    <link href="../vendor/css/LineIcons.min.css" rel="stylesheet">
-    <link href="../vendor/css/jquery.fancybox.min.css" rel="stylesheet">
-    <link href="../vendor/css/owl.carousel.min.css" rel="stylesheet">
-    <link href="../vendor/css/cubeportfolio.min.css" rel="stylesheet">
-    <link href="../dark-creative/css/line-awesome.min.css" rel="stylesheet">
+    <link href="vendor/css/wow.css" rel="stylesheet">
+    <link href="vendor/css/LineIcons.min.css" rel="stylesheet">
+    <link href="vendor/css/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="vendor/css/owl.carousel.min.css" rel="stylesheet">
+    <link href="vendor/css/cubeportfolio.min.css" rel="stylesheet">
+    <link href="css/line-awesome.min.css" rel="stylesheet">
     <!-- Style Sheet -->
-    <link href="../dark-creative/css/style.css" rel="stylesheet">
-    <link href="../dark-creative/css/custom.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
 
-<!-- Start Loader -->
-<div class="loader">
-    <div class="container">
-        <div class="row">
-            <div class="container">
-                <div class="row">
-                    <a class="intro-banner-vdo-play-btn pinkBg">
-                        <i class="glyphicon glyphicon-play whiteText" aria-hidden="true"></i>
-                        <span class="ripple pinkBg"></span>
-                        <span class="ripple pinkBg"></span>
-                        <span class="ripple pinkBg"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- End Loader -->
-
 <!-- Start Header -->
 <header id="home">
-    <div class="top-banner bg-trans-color  transparent-banner">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4 col-lg-4 d-flex align-items-center">
-                    <a href="javascript:void(0)" class="sidemenu_btn active link sidemenu_toggle">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center">
-                    <div class="logo-center">
-                        <a href="../index-dark-creative.html">
-                            <img src="img/logo.png" alt="LOGO IMAGE"></a>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4 text-right">
-                    <div class="banner-icons mt-2 mr-2">
-                        <a href="#"><i class="lab la-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-x-twitter"></i></a>
-                        <a href="#"><i class="lab la-linkedin-in"></i></a>
-                        <a href="#"><i class="lab la-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <nav class="navbar navbar-top-default navbar-expand-lg navbar-simple nav-line">
         <div class="container">
+            <a href="#slider-area" title="Logo" class="logo scroll">
+                <!--Logo Default-->
+                <img src="img/future-forward-ventures-logo-small.png" title="logo" alt="logo" class="logo-default">
+            </a>
             <div class="collapse navbar-collapse" id="megaone">
                 <div class="navbar-nav  ml-auto mr-auto">
-                    <a class="nav-link line" href="../index-dark-creative.html#home">Home</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#about">About</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#team">Team</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#work">Work</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#pricing">Pricing</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#blog">Blog</a>
-                    <a class="nav-link line" href="../index-dark-creative.html#contact">Contact</a>
+                    <a class="nav-link line" href="https://greenfinanceai.com">Home</a>
+                    <a class="nav-link scroll line" href="#home">Training</a>
+                    <a class="nav-link line" href="https://greenfinanceai.com#contact">Contact</a>
                 </div>
             </div>
         </div>
@@ -104,37 +58,23 @@
             <nav class="side-nav w-100">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#home">Home</a>
+                        <a class="nav-link" href="https://greenfinanceai.com">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#about">About</a>
+                        <a class="nav-link" href="#home">Training</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#work">Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#pricing">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index-dark-creative.html#contact">Contact</a>
+                        <a class="nav-link" href="https://greenfinanceai.com#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
 
             <div class="side-footer w-100">
                 <ul class="social-icons-simple">
-                    <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fab fa-x-twitter"></i></a></li>
-                    <li><a class="linkedin-text-hvr" href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a></li>
-                    <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i></a></li>
+                    <li><a class="github-text-hvr" href="https://github.com/Green-Finance-AI"><i class="fab fa-github"></i></a></li>
+                    <li><a class="docker-text-hvr" href="https://hub.docker.com/u/alicesoto"><i class="fab fa-docker"></i></a></li>
+                    <li><a class="envelope-text-hvr" href="mailto:info@greenfinanceai.com"><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
-                <p class="text-white">&copy; 2024 MegaOne. Made With Love by <span class="d-inline d-lg-block"> ThemesIndustry</span></p>
             </div>
         </div>
     </div>
@@ -161,16 +101,16 @@
 <!-- End Fix Nav -->
 
 <!--Banner Start-->
-<section class="page-title parallax">
+<!-- <section class="page-title parallax">
     <div class="bg-overlay bg-black opacity-7"></div>
     <div class="container">
         <h2 class="hide-cursor">StandAlone Page</h2>
         <ul class="page-breadcrumb link">
-            <li><a href="../index-dark-creative.html"><span class="icon fas fa-home"></span>Home</a></li>
+            <li><a href="index-dark-creative.html"><span class="icon fas fa-home"></span>Home</a></li>
             <li>StandAlone</li>
         </ul>
     </div>
-</section>
+</section> -->
 <!--Banner End-->
 
 <!-- Start Inner Content -->
@@ -256,17 +196,21 @@
             <div class="col-12">
                 <div class="footer-social text-center">
                     <ul class="list-unstyled">
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-facebook-f"></i><span></span></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-x-twitter"></i><span></span></a></li>
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-google-plus-g"></i><span></span></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-linkedin-in"></i><span></span></a></li>
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-instagram"></i><span></span></a></li>
+                        <!-- <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-x-twitter"></i><span></span></a></li>
+                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-google-plus-g"></i><span></span></a></li> -->
+                        <li><a class="wow fadeInUp" href="https://github.com/Green-Finance-AI"><i aria-hidden="true" class="fab fa-github"></i><span></span></a></li>
+                        <li><a class="wow fadeInDown" href="https://hub.docker.com/u/alicesoto"><i aria-hidden="true" class="fab fa-docker"></i><span></span></a></li>
+                        <!-- <li><a class="wow fadeInUp" href="https://www.linkedin.com/in/alicelepissier/"><i aria-hidden="true" class="fab fa-linkedin-in"></i><span></span></a></li> -->
+                        <li><a class="wow fadeInDown" href="mailto:info@greenfinanceai.com"><i aria-hidden="true" class="fa-solid fa-envelope"></i><span></span></a></li>
+                        <!-- <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-instagram"></i><span></span></a></li> -->
                     </ul>
                 </div>
             </div>
             <!--Text-->
             <div class="col-12 text-center mt-3">
-                <p class="company-about fadeIn">&copy; 2024 MegaOne. Made With Love By <a href="javascript:void(0);">Themesindustry</a>
+                <p class="company-about fadeIn">&copy; 2025 Green Finance AI. A company by 
+                    <img src="img/future-forward-ventures-logo.png" alt="Future Forward Ventures" style="height: 24px; vertical-align: bottom;"> 
+                    <a href="https://futureforwardventures.ai" style="color: inherit; text-decoration: none;" onmouseover="this.style.color='#1ED873'" onmouseout="this.style.color='inherit'">Future Forward Ventures</a>.
                 </p>
             </div>
         </div>
@@ -279,20 +223,17 @@
 <!-- End Scroll Top -->
 
 <!-- JavaScript -->
-<script src="../vendor/js/bundle.min.js"></script>
+<script src="vendor/js/bundle.min.js"></script>
 <!-- Plugin Js -->
-<script src="../vendor/js/jquery.appear.js"></script>
-<script src="../vendor/js/morphext.min.js"></script>
-<script src="../vendor/js/parallaxie.min.js"></script>
-<script src="../vendor/js/owl.carousel.min.js"></script>
-<script src="../vendor/js/jquery.cubeportfolio.min.js"></script>
-<script src="../vendor/js/wow.min.js"></script>
-<!-- Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4fusEY9kSwNHgtK8KOgyoTsyP5Tb2NXo"></script>
-<script src="../dark-creative/js/map.js"></script>
+<script src="vendor/js/jquery.appear.js"></script>
+<script src="vendor/js/morphext.min.js"></script>
+<script src="vendor/js/parallaxie.min.js"></script>
+<script src="vendor/js/owl.carousel.min.js"></script>
+<script src="vendor/js/jquery.cubeportfolio.min.js"></script>
+<script src="vendor/js/wow.min.js"></script>
 
 <!-- CUSTOM JS -->
-<script src="../vendor/js/contact_us.js"></script>
-<script src="../dark-creative/js/script.js"></script>
+<script src="vendor/js/contact_us.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
