--- a/index.html
+++ b/index.html
@@ -100,88 +100,46 @@
 </div>
 <!-- End Fix Nav -->
 
-<!--Banner Start-->
-<!-- <section class="page-title parallax">
-    <div class="bg-overlay bg-black opacity-7"></div>
-    <div class="container">
-        <h2 class="hide-cursor">StandAlone Page</h2>
-        <ul class="page-breadcrumb link">
-            <li><a href="index-dark-creative.html"><span class="icon fas fa-home"></span>Home</a></li>
-            <li>StandAlone</li>
-        </ul>
-    </div>
-</section> -->
-<!--Banner End-->
-
 <!-- Start Inner Content -->
-<section class="main standalone" id="main">
-    <!--content-->
-    <div class="blog-content">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-12">
-                    <!-- START HEADING SECTION -->
-                    <div class="standalone-detail">
-                        <div class="row no-gutters">
-                            <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
-                                <p class="sub-heading text-center text-yellow">Most flexible one page</p>
-                                <h1 class="heading text-white">Section Title</h1>
-                                <p class="para_text m-auto">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus.</p>
-                            </div>
-                        </div>
-                    </div>
+<section class="welcome" id="about">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 wow zoomIn heading-area" data-wow-duration="1s">
+                <span class="sub-heading text-yellow">Empower your team with advanced analytical skills</span>
+                <h3 class="heading text-center">Green Finance AI Training Platform</h3>
+                <p>
+                    Explore our interactive, state-of-the-art training environment designed specifically for data scientists, researchers, and analysts. Our platform provides secure, web-based access to JupyterLab and RStudio Server, enabling collaborative work and individualized learning experiences in real-time.
+                </p>
+                <br>
+                <p>
+                    With our powerful multi-user JupyterHub setup, every participant receives their own isolated environment. Users can freely install custom Python packages in their virtual environments, ensuring flexibility and independence to experiment and innovate without system-wide restrictions.
+                </p>
+                <br>
+                <p>
+                    This setup encourages practical learning and hands-on experimentation, empowering your organization with the tools and knowledge necessary to excel in data-driven roles.
+                </p>
+            </div>
+        </div>
 
-                    <div class="standalone-area">
-                        <!-- First-Row -->
-                        <div class="row standalone-row align-items-center no-gutters">
-                            <div class="col-lg-6">
-                                <div class="blog-image wow hover-effect fadeInLeft image">
-                                    <img src="img/standalone-img1.jpg" alt="image">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 stand-img-des">
-                                <div class="d-inline-block">
-                                    <p class="sub-heading text-center text-yellow">Most flexible one page</p>
-                                    <h2 class="heading-text text-white">Standalone Heading</h2>
-                                    <p class="para_text">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. </p>
-                                </div>
-                            </div>
-                        </div>
+        <!-- Links to Training Environments -->
+        <div class="row text-center align-items-center justify-content-center mt-5">
+            <!-- JupyterHub Link -->
+            <div class="col-md-5 wow fadeInLeft" data-wow-duration="1s">
+                <a href="https://training.greenfinanceai.com/jupyter/" target="_blank">
+                    <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jupyter/jupyter-original-wordmark.svg" alt="Jupyter" width="100" style="max-width: 100%;">
+                </a>
+                <h5 class="mt-3">Launch JupyterHub</h5>
+            </div>
 
-                        <!-- Second-Row -->
-                        <div class="row standalone-row align-items-center no-gutters">
-                            <div class="col-lg-6 order-lg-2">
-                                <div class="blog-image wow hover-effect fadeInRight text-center text-lg-right image">
-                                    <img src="img/standalone-img2.jpg" alt="image">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 stand-img-des">
-                                <div class="d-inline-block">
-                                    <p class="sub-heading text-center text-yellow">Most flexible one page</p>
-                                    <h2 class="heading-text text-white">Standalone Heading</h2>
-                                    <p class="para_text">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. </p>
-                                </div>
-                            </div>
-                        </div>
+            <!-- Spacer -->
+            <div class="col-md-1"></div>
 
-                        <!-- Third-Row -->
-                        <div class="row standalone-row align-items-center no-gutters">
-                            <div class="col-lg-6">
-                                <div class="blog-image wow hover-effect fadeInLeft image">
-                                    <img src="img/standalone-img3.jpg" alt="image">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 stand-img-des">
-                                <div class="d-inline-block">
-                                    <p class="sub-heading text-center text-yellow">Most flexible one page</p>
-                                    <h2 class="heading-text text-white">Standalone Heading</h2>
-                                    <p class="para_text">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- END HEADING SECTION -->
-                </div>
+            <!-- RStudio Link -->
+            <div class="col-md-5 wow fadeInRight" data-wow-duration="1s">
+                <a href="https://training.greenfinanceai.com/rstudio/" target="_blank">
+                    <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rstudio/rstudio-original.svg" alt="RStudio" width="85" style="max-width: 100%;">
+                </a>
+                <h5 class="mt-3">Launch RStudio Server</h5>
             </div>
         </div>
     </div>
