Style headings to launch servers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Description -->
     <meta name="description" content="Training platform with RStudio and JupyterLab">
     <!-- Page Title -->
-    <title>Dark Creative StandAlone | MegaOne HTML5 Template</title>
+    <title>Green Finance AI | Training Platform</title>
     <!-- Favicon -->
     <link href="vendor/img/favicon.ico" rel="icon">
     <!-- Bundle -->
@@ -128,7 +128,7 @@
                 <a href="https://training.greenfinanceai.com/jupyter/" target="_blank">
                     <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jupyter/jupyter-original-wordmark.svg" alt="Jupyter" width="100" style="max-width: 100%;">
                 </a>
-                <h5 class="mt-3">Launch JupyterHub</h5>
+                <h5 class="launch-server-heading mt-3">Launch JupyterHub</h5>
             </div>
 
             <!-- Spacer -->
@@ -139,7 +139,7 @@
                 <a href="https://training.greenfinanceai.com/rstudio/" target="_blank">
                     <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rstudio/rstudio-original.svg" alt="RStudio" width="85" style="max-width: 100%;">
                 </a>
-                <h5 class="mt-3">Launch RStudio Server</h5>
+                <h5 class="launch-server-heading mt-3">Launch RStudio Server</h5>
             </div>
         </div>
     </div>
